--- a/style.css
+++ b/style.css
@@ -46,15 +46,57 @@ header nav ul li a {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
     color: #111;
-    
+    text-transform: uppercase;
 }
 
 header .header-link {
     display: none;
 }
 
-@media only screen {
+@media only screen and (min-width:1000px) {
+
+    header .header-brand {
+        margin:31px 0;
+        text-align: left;
+        padding: 0px 20px 0px 40px;
+        border-right: 3px solid #111;
+        float: left;
+        line-height: 38px;
+    }
     
+header nav ul {
+    margin: 20px 0px 0px 20px ;
+    float: left;
+}
+
+header nav ul li {
+    display: inline-block;
+    float: left;
+    list-style-type: none;
+    padding: 0 16px;
+
+}
+
+header nav ul li a {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    color: #111;
+    line-height: 60px;
+}
+header .header-link {
+    display: block;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    color: #111;
+    text-transform: uppercase;
+    line-height: 38px;
+    float: right;
+    border: 1px solid #111;
+    margin-right: 40px;
+    padding: 0 20px;
+    margin-top: 30px;
+}
+
 }
 
 /* INDEX */
@@ -117,6 +159,51 @@ line-height: 100px;
 
 }
 
+@media only screen and (min-width: 1000px) {
+    
+    .wrapper {
+        width :1000px;
+        margin: 0 auto;
+    }
+
+    .index-banner {
+        width: 100%;
+        height: 450px;
+       
+    
+    }
+    
+    .index-banner h1 {
+        display: block;
+        width: 560px;
+        margin: 0 auto;
+    }
+
+    .index-links {
+        overflow: hidden;
+    }
+
+    .index-links div {
+        margin: 20px 10px 0;
+        height: 230px;
+        background-color: #f2f2f2;
+        float: left;
+    
+    }
+
+    .index-boxlink-square {
+        width: calc(25% - 20px) !important;
+    }
+
+    .index-boxlink-rectangle {
+        width: calc(50% - 20px) !important;
+    }
+    
+    .index-links div h3 {
+        line-height: 230px;
+    }
+}
+
 /* Footer */
 footer {
     width: 100% ;
@@ -158,4 +245,10 @@ footer ul li a {
 .footer-sm img {
     width: 100%;
     padding: 10px;
+}
+
+@media only screen and (min-width: 1000px) {
+    .link-cases {
+        display: block;
+    }
 }
